<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.brooklyn</groupId>
	<artifactId>brooklyn-provisioners</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Brooklyn Provisioners</name>
	<description>Contains 2 simple applications to install mysql using Puppet-Masterless or Chef-Solo</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<brooklyn.version>0.5.0-SNAPSHOT</brooklyn.version>
		<includedTestGroups />
		<excludedTestGroups>Integration,Live</excludedTestGroups>
		<testRunTimeoutSecs>300</testRunTimeoutSecs>
	</properties>

	<repositories>
		<repository>
			<id>cloudsoft-releases</id>
			<url>http://developers.cloudsoftcorp.com/download/maven2/</url>
		</repository>
		<repository>
			<id>libs-snapshot-local</id>
			<url>http://ccweb.cloudsoftcorp.com/maven/libs-snapshot-local/</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
				<checksumPolicy>fail</checksumPolicy>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
	<!-- 
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>14.0-rc1</version>
        </dependency>
	 -->
		<dependency>
			<groupId>io.brooklyn</groupId>
			<artifactId>brooklyn-core</artifactId>
			<version>${brooklyn.version}</version>
		</dependency>
        <dependency>
            <groupId>io.brooklyn</groupId>
            <artifactId>brooklyn-locations-jclouds</artifactId>
            <version>${brooklyn.version}</version>
        </dependency>		
		<dependency>
			<groupId>io.brooklyn</groupId>
			<artifactId>brooklyn-api</artifactId>
			<version>${brooklyn.version}</version>
		</dependency>
		<dependency>
			<groupId>io.brooklyn</groupId>
			<artifactId>brooklyn-launcher</artifactId>
			<version>${brooklyn.version}</version>
		</dependency>

		<dependency>
			<groupId>io.brooklyn</groupId>
			<artifactId>brooklyn-software-database</artifactId>
			<version>${brooklyn.version}</version>
		</dependency>
		<dependency>
            <groupId>io.brooklyn</groupId>
            <artifactId>brooklyn-software-webapp</artifactId>
            <version>${brooklyn.version}</version>
        </dependency>
		<dependency>
			<groupId>io.brooklyn</groupId>
			<artifactId>brooklyn-logback-xml</artifactId>
			<version>${brooklyn.version}</version>
			<optional>true</optional>
		</dependency>
		
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>brooklyn-test-support</artifactId>
            <version>${brooklyn.version}</version>
            <scope>test</scope>
        </dependency>	
        <dependency>
            <groupId>io.brooklyn</groupId>
            <artifactId>brooklyn-core</artifactId>
            <version>${brooklyn.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.brooklyn</groupId>
            <artifactId>brooklyn-software-base</artifactId>
            <version>${brooklyn.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
        </dependency>             
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<argLine>-Xms256m -Xmx768m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
		</plugins>

	</build>
</project>